--- a/HDRezka/ClientApp/src/App.css
+++ b/HDRezka/ClientApp/src/App.css
@@ -68,3 +68,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.history-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
