--- a/HDRezka/ClientApp/src/App.css
+++ b/HDRezka/ClientApp/src/App.css
@@ -81,3 +81,25 @@
   justify-content: center;
   align-items: center;
 }
+
+.video-container {
+  position: relative;
+  display: flex;
+  align-self: center;
+}
+
+.video-overlay {
+  position: absolute;
+  top: 10px;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  background-color: rgba(221, 221, 221, 0.3);
+  width: 100%;
+  padding: 10px 0;
+  z-index: 2;
+}
+
+.video {
+  z-index: 1;
+}
